--- a/CSS/index.css
+++ b/CSS/index.css
@@ -25,7 +25,7 @@ body {
     background-size: cover;
     background: var(--cor-do-fundo);
     margin: 0;
-    padding: 0;                                                                                                         
+    padding:0;                                                                                                         
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -33,6 +33,7 @@ body {
 
 .title1 {
     color: var(--cor-do-titulo);
+    font-size: 30px;
     display: flex;
     margin: auto;
     text-align: center;
@@ -48,7 +49,7 @@ body {
 }
 
 .nav-li {
-    margin-left: 10px;
+    margin-left: 1px;
 }
 
 .nav-ul {
@@ -72,4 +73,25 @@ body {
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
     transition: 150ms;
+}
+
+.localation{
+    background-color: #c2c2c2;
+    width: 250px;
+    height: 44px;
+    margin: auto;
+    margin-top: 20px;
+    text-align: center;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 2px 2px 1px rgb(0, 64, 201);
+}
+
+.localation > p{
+    color: #000000;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#localation-input{
+    border-radius: 20px;
 }
