--- a/CSS/index.css
+++ b/CSS/index.css
@@ -34,18 +34,16 @@ body {
 .title1 {
     color: var(--cor-do-titulo);
     font-size: 30px;
-    display: flex;
-    margin: auto;
-    text-align: center;
+   
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background: var(--cor-do-header);
-    padding: 0 1rem;
+
 }
 
 .nav-li {
@@ -76,7 +74,7 @@ body {
 }
 
 .localation{
-    background-color: #c2c2c2;
+    background-color: #ececec;
     width: 250px;
     height: 44px;
     margin: auto;
